# HTLM-jos-pizza

./: .env  _wheather.html  create.db.sql  main.py  pizzas.db  pyproject.toml  test.py
data/: answers.txt  db.py  wheather.py
forms/: forms.py
models/: associate.py  base.py  ingredient.py  pizza.py  reviews.py
routes/: pizza.py  reviews.py
static/: contacts.css  index.css  menu.css  nicepage.css  style.css
templates/: _base.html  _macros.html  _navigation.html  _wheather.html  add_review.html  contacts.html  edit_pizza.html  index.html  menu.html  poll.html  results.html  reviews.html
