[tool.poetry]
name = "htlm jos pizza"
version = "0.1.0"
description = ""
authors = ["mitsy01 <alexanderfigmochka19@gmail.com>"]
license = "MIA"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
sqlalchemy = "^2.0.35"
requests = "^2.32.3"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
